2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.1 for release

2008-06-15  Lapo Calamandrei  <calamandrei@gmail.com>

	* {16x16,22x22,24x24}/actions/zoom* : redone in svg.
	* 8x8/emblems/emblem-default* : made more consistent with the rest.
	
2008-06-14  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up the icon-naming-utils requirement to 0.8.7 (#523707)
	Remove 48x48/emblems/Makefile from AC_OUTPUT

	Fixes #523707

2008-06-14  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/animations/Makefile.am:
	Use ln -sf for installing the symlink for gnome-searchtool animation

	Fixes #538295

2008-06-12  Andreas Nilsson  <andreas@andreasn.se>

	* {16x16,22x22,24x24,32x32,scalable}/mimetypes/x-office-presentation.*:
	new icon by Lapo Calamandrei and Hylke Bons

2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/Makefile.am:
	* 48x48/emblems/:
	Remove the rest of the old emblems for now
	We can add some back as tags under Categories when we determine what
	a good default set of tags would be
	
2008-06-12  Jakub Steiner <jimmac@ximian.com>

	* call-start, call-stop: action icons by Lapo Calamandrei.

2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/Makefile.am:
	* 24x24/apps/display-capplet.png:
	Remove this as control-center ships its own
	
	* 48x48/apps/Makefile.am:
	* 48x48/apps/gnome-amusements.png:
	* 48x48/apps/gnome-audio.png:
	* 48x48/apps/gnome-desktop-config.png:
	* 48x48/apps/gnome-pdf.png:
	* 48x48/apps/gnome-server-config.png:
	* 48x48/apps/gnome-system-config.png:
	* 48x48/apps/hint.png:
	* 48x48/apps/im.png:
	* 48x48/apps/launcher-program.png:
	* 48x48/apps/postscript-viewer.png:
	Remove more deprecated icons

	* 48x48/emblems/Makefile.am:
	* 48x48/emblems/emblem-OK.*:
	* 48x48/emblems/emblem-camera.*:
	* 48x48/emblems/emblem-distinguished.*:
	* 48x48/emblems/emblem-draft.*:
	* 48x48/emblems/emblem-handshake.*:
	* 48x48/emblems/emblem-note.*:
	* 48x48/emblems/emblem-people.*: